[project]
name = "pytorch-generative"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.18.4",
    "pillow>=7.2.0",
    "scikit-learn>=1.2.1",
    "tensorboard>=2.3.0",
    "torch>=1.5.1",
    "torchvision>=0.6.1",
]
